Add first styling - font family and color scheme

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -8,3 +8,9 @@
 // @use 'vuetify/settings' with (
 //   $color-pack: false
 // );
+
+@use 'vuetify' with (
+  $body-font-family: 'Ruda',
+  );
+
+@import url('https://fonts.googleapis.com/css2?family=Ruda:wght@400&display=swap');
