--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,3 +11,14 @@
 .container-max-w {
   max-width: 1200px !important;
 }
+
+/* Section header */
+.section-header {
+  letter-spacing: 0.2rem !important;
+  margin-bottom: 1rem;
+  text-transform: uppercase;
+  font-weight: 900;
+  font-size: medium;
+  color: rgb(var(--v-theme-primary));
+  
+}
