--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,7 @@
 /* Define View container dimensions */
 .container-min-h {
   height: max-content;
-  min-height: 100dvh;
+  min-height: 100svh;
   max-height: none;
   overflow: hidden;
 }
