Change navItems list  structure, add submenus to appBar and appDrawer, make them highlighted with intersectionObserver.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,3 +25,7 @@ a {
   text-decoration: none;
   color: rgb(var(--v-theme-on-surface));
 }
+
+a.text-on-surface {
+  color: rgb(var(--v-theme-on-surface)) !important;
+}
